--- a/stacked_avatar/style.css
+++ b/stacked_avatar/style.css
@@ -29,13 +29,13 @@ body {
 .avatar-container {
     border: 6px solid rgb(17, 17, 17);
     width: 75px;
-    aspect-ratio: 1;
+    height: 75px;
     border-radius: 100%;
     margin-inline: -18px;
     position: relative;
     /* overflow: hidden; */
     /* transition: transform .5s ease-in-out; */
-    transition: all 0.5s linear(0, 1 44.7%, 0.898 51.8%, 0.874 55.1%, 0.866 58.4%, 0.888 64.3%, 1 77.4%, 0.98 84.5%, 1);
+    transition: all 0.3s linear(0, 1 44.7%, 0.898 51.8%, 0.874 55.1%, 0.866 58.4%, 0.888 64.3%, 1 77.4%, 0.98 84.5%, 1);
 }
 
 .avatar {
