--- a/card_flip/style.css
+++ b/card_flip/style.css
@@ -1,6 +1,4 @@
-
 @import url("https://fonts.googleapis.com/css2?family=Bitcount:wght@400..900&display=swap");
-
 
 *,
 *::before,
@@ -14,21 +12,20 @@ body {
     display: grid;
     place-items: center;
     background-color: #d4d4d4;
-    font-family: "Mozilla Headline", sans-serif;
-    font-family: "Fjalla One", sans-serif;
     font-family: "Bitcount", system-ui;
 }
 
 .card {
     width: 300px;
     transform-style: preserve-3d;
+    perspective: 2000px;
 }
 
 .content {
     position: relative;
     text-align: center;
     padding: 12rem 5rem;
-    transition: transform 3s;
+    transition: transform 0.8s cubic-bezier(0.4, 0.2, 0.2, 1); /* faster, smoother flip */
     transform-style: preserve-3d;
     border-radius: 20px;
 }
@@ -41,7 +38,7 @@ body {
 .back {
     position: absolute;
     inset: 0;
-    padding: .5rem 2.5rem;
+    padding: 0.5rem 2.5rem;
     display: grid;
     place-items: center;
     transform-style: preserve-3d;
@@ -73,7 +70,7 @@ body {
 
 .description {
     transform: translateZ(5rem);
-    word-break: break-all;
+    word-break: break-word;
     font-weight: 100;
 }
 
