--- a/hologram-effect/style.css
+++ b/hologram-effect/style.css
@@ -33,15 +33,22 @@ body {
     border-radius: 1rem;
 }
 
+.container,
+.card {
+    perspective: 1000px;
+    transition: transform 0.15s ease-out;
+    transform-style: preserve-3d;
+}
+
 .card {
     position: relative;
     height: 400px;
     width: 300px;
     background: red;
     border-radius: 1rem;
-    background-color: #000000;
+    /* background-color: #000000; */
     background: radial-gradient(
-        circle 250px at calc(var(--x) * 1px) calc(var(--y) * 1px),
+        circle 200px at calc(var(--x) * 1px) calc(var(--y) * 1px),
         #ff1744,
         #ff9500,
         #ffd600,
@@ -50,6 +57,7 @@ body {
         #2196f3,
         #3f51b5,
         #9c27b0,
+        #9b27b041,
         transparent
     );
 
@@ -57,6 +65,9 @@ body {
     mask-size: 50px;
     mask-position: center;
     mask-repeat: 100px 300px;
+
+    z-index: 10;
+    isolation: isolate;
 }
 
 .card::before {
@@ -64,8 +75,17 @@ body {
     position: absolute;
     inset: 0;
     background: radial-gradient(
-        circle 300px at calc(var(--x) * 1px) calc(var(--y) * 1px),
-        hsl(0 0% 100% / 0.65),
-        transparent 
+        circle 200px at calc(var(--x) * 1px) calc(var(--y) * 1px),
+        hsl(0 0% 100% / 0.45),
+        transparent
     );
+    z-index: 10;
+}
+
+.card::after {
+    content: "";
+    position: absolute;
+    inset: 0;
+    background-color: black;
+    z-index: -1;
 }
